Fix row alignment for images in library due to general paragraph margin rule

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,10 @@ img {
     margin: auto;
 }
 
+div>p {
+    margin: 0px;
+}
+
 #library-images {
     column-count: 3;
     text-align: center;
